# polygon

./: .gitmodules  CMakeLists.txt  README.md
src/: line.h  polygon.h  types.h  vector_2d.h  vector_3d.h  vector_nd.h
test/: line_test.cc  polygon_test.cc
